# ping_pong

./: .gitignore  CMakeLists.txt  README.md
include/pingpong/: pingpong.hpp
libsrc/pingpong/: CMakeLists.txt
libsrc/pingpong/src/: pingpong.cpp
projects/pingpong_wrapper/: CMakeLists.txt
projects/pingpong_wrapper/src/: pingpong_wrapper.cpp
